--- a/aulas/aula01/home.html
+++ b/aulas/aula01/home.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <img src="" alt="Logo da Aplicacao">
-        <input type="search" name="pesquisa">
-        <img src="" alt="Icone da Pesquisa">
+        <div>
+            <img src="https://www.svgrepo.com/show/489120/school.svg" alt="Logo da Aplicaçao">
+            <h1>Aluno Online</h1>
+        </div>
+        <div>
+            <input type="search" name="filtro" placeholder="Pesquisar...">
+            <img src="https://www.svgrepo.com/show/532555/search.svg" alt="Icone de Pesquisa">
+        </div>
     </header>
-    <aside>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="perfil.html">Perfil</a></li>
-            <li><a href="index.html">Sair</a></li>
-        </ul>
-    </aside>
     <main>
-        <h1>Home</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="index">Sair</a></li>
+            </ul>
+        </nav>
+        <section>
+            <h2>Pagina Inicial</h2>
+            <article>
+                <h3>Mural de Avisos</h3>
+            </article>
+            <article>
+                <h3>Agenda Academica</h3>
+            </article>
+        </section>
     </main>
-    <footer></footer>
+
 </body>
 
 </html>
