--- a/aulas/aula01/index.html
+++ b/aulas/aula01/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aluno Online</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <main>
+    
+    <main class="login-container">
         <img src="" alt="Logo da Aplcacao">
         <form method="post" action="home.html">
             <h1>Login</h1>
